# par-dual

./: README.md  par-dual.cabal  shell.nix
.github/workflows/: haskell.yml
app/: Main.hs
src/Control/: Dual.hs
src/Control/Dual/: Class.hs
src/Control/ParDual/: Class.hs
test/: Main.hs
