cabal-version:       3.0

name:                par-dual
version:             0.1.0.0
-- synopsis:
description:         Defines a Dual typeclass for a relationship Parallel -> Sequential
homepage:            https://github.com/gvolpe/par-dual
bug-reports:         https://github.com/gvolpe/par-dual/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          volpegabriel@gmail.com
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Control.Dual
                     , Control.Dual.Class
  build-depends:       base
                     , async
                     , natural-transformation
                     , validators
  hs-source-dirs:      src
  default-language:    Haskell2010

executable par-dual
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base
                     , par-dual
                     , random
                     , refined
                     , validators
  default-language:    Haskell2010
